# nick_viewer

./: CMakeLists.txt  dataset_path.h.in  src_path.h.in
gui/: CMakeLists.txt  QtSculptorWidget.cpp  QtSculptorWidget.h  SculptorWidget.cpp  SculptorWidget.h  SculptorWindow.cpp  SculptorWindow.h  drawbh.cpp  drawbh.h  main.cc  mainwindow.ui
src/: BBox.cpp  BBox.h  BHNode.cpp  BHNode.h  BarnesHut.cpp  BarnesHut.h  CMakeLists.txt  DriverBH.cpp  DriverBH.h  Particle.cpp  Particle.h  basic.frag  raycast.frag  raycast.vert
src/Shaders/: marchingcube.frag  marchingcube.geom  marchingcube.vert
